--- a/docs/customize/deep-dives/custom-providers.mdx
+++ b/docs/customize/deep-dives/custom-providers.mdx
@@ -15,202 +15,251 @@ You can add any built-in context-providers in your config file as shown below:
 
 Reference any file in your current workspace.
 
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:  - provider: file
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "file" }] }
-```
+<Tabs>
+  <Tab title="YAML">
+    ```yaml config.yaml
+    context:
+      - provider: file
+    ```
+  </Tab>
+  <Tab title="JSON (Deprecated)">
+    ```json config.json
+    {
+      "contextProviders": [
+        {
+          "name": "file"
+        }
+      ]
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ### `@Code`
 
 Reference specific functions or classes from throughout your project.
 
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:  - provider: code
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "code" }] }
-```
+<Tabs>
+  <Tab title="YAML">
+    ```yaml config.yaml
+    context:
+      - provider: code
+    ```
+  </Tab>
+  <Tab title="JSON (Deprecated)">
+    ```json config.json
+    {
+      "contextProviders": [
+        {
+          "name": "code"
+        }
+      ]
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ### `@Git Diff`
 
 Reference all of the changes you've made to your current branch. This is useful if you want to summarize what you've done or ask for a general review of your work before committing.
 
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:  - provider: diff
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "diff" }] }
-```
+<Tabs>
+  <Tab title="YAML">
+    ```yaml config.yaml
+    context:
+      - provider: diff
+    ```
+  </Tab>
+  <Tab title="JSON (Deprecated)">
+    ```json config.json
+    {
+      "contextProviders": [
+        {
+          "name": "diff"
+        }
+      ]
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ### `@Current File`
 
 Reference the currently open file.
 
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:  - provider: currentFile
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "currentFile" }] }
-```
+<Tabs>
+  <Tab title="YAML">
+    ```yaml config.yaml
+    context:
+      - provider: currentFile
+    ```
+  </Tab>
+  <Tab title="JSON (Deprecated)">
+    ```json config.json
+    {
+      "contextProviders": [
+        {
+          "name": "currentFile"
+        }
+      ]
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ### `@Terminal`
 
 Reference the last command you ran in your IDE's terminal and its output.
 
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:  - provider: terminal
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "terminal" }] }
-```
-
-
+<Tabs>
+  <Tab title="YAML">
+    ```yaml config.yaml
+    context:
+      - provider: terminal
+    ```
+  </Tab>
+  <Tab title="JSON (Deprecated)">
+    ```json config.json
+    {
+      "contextProviders": [
+        {
+          "name": "terminal"
+        }
+      ]
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ### `@Open`
 
 Reference the contents of all of your open files. Set `onlyPinned` to `true` to only reference pinned files.
 
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: open
-    params:
-      onlyPinned: true
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "open", "params": { "onlyPinned": true } }] }
-```
+<Tabs>
+  <Tab title="YAML">
+    ```yaml config.yaml
+    context:
+      - provider: open
+        params:
+          onlyPinned: true
+    ```
+  </Tab>
+  <Tab title="JSON (Deprecated)">
+    ```json config.json
+    {
+      "contextProviders": [
+        {
+          "name": "open",
+          "params": {
+            "onlyPinned": true
+          }
+        }
+      ]
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ### `@Clipboard`
 
 Reference recent clipboard items
 
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: clipboard
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "clipboard" }] }
-```
+<Tabs>
+  <Tab title="YAML">
+    ```yaml config.yaml
+    context:
+      - provider: clipboard
+    ```
+  </Tab>
+  <Tab title="JSON (Deprecated)">
+    ```json config.json
+    {
+      "contextProviders": [
+        {
+          "name": "clipboard"
+        }
+      ]
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ### `@Tree`
 
 Reference the structure of your current workspace.
 
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: tree
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "tree" }] }
-```
+<Tabs>
+  <Tab title="YAML">
+    ```yaml config.yaml
+    context:
+      - provider: tree
+    ```
+  </Tab>
+  <Tab title="JSON (Deprecated)">
+    ```json config.json
+    {
+      "contextProviders": [
+        {
+          "name": "tree"
+        }
+      ]
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ### `@Problems`
 
 Get Problems from the current file.
 
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: problems
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "problems" }] }
-```
+<Tabs>
+  <Tab title="YAML">
+    ```yaml config.yaml
+    context:
+      - provider: problems
+    ```
+  </Tab>
+  <Tab title="JSON (Deprecated)">
+    ```json config.json
+    {
+      "contextProviders": [
+        {
+          "name": "problems"
+        }
+      ]
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ### `@Debugger`
 
 Reference the contents of the local variables in the debugger. Currently only available in VS Code.
 
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: debugger
-    params:
-      stackDepth: 3
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "debugger", "params": { "stackDepth": 3 } }] }
-```
+<Tabs>
+  <Tab title="YAML">
+    ```yaml config.yaml
+    context:
+      - provider: debugger
+        params:
+          stackDepth: 3
+    ```
+  </Tab>
+  <Tab title="JSON (Deprecated)">
+    ```json config.json
+    {
+      "contextProviders": [
+        {
+          "name": "debugger",
+          "params": {
+            "stackDepth": 3
+          }
+        }
+      ]
+    }
+    ```
+  </Tab>
+</Tabs>
 
 Uses the top _n_ levels (defaulting to 3) of the call stack for that thread.
 
@@ -220,23 +269,30 @@ Reference the outline of your codebase. By default, signatures are included alon
 
 `includeSignatures` params can be set to false to exclude signatures. This could be necessary for large codebases and/or to reduce context size significantly. Signatures will not be included if indexing is disabled.
 
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: repo-map
-    params:
-      includeSignatures: false # default true
-```
-
-config.json
-
-```json
-{  "contextProviders": [    {      "name": "repo-map",      "params": {        "includeSignatures": false // default true      }    }  ]}
-```
+<Tabs>
+  <Tab title="YAML">
+    ```yaml config.yaml
+    context:
+      - provider: repo-map
+        params:
+          includeSignatures: false # default true
+    ```
+  </Tab>
+  <Tab title="JSON (Deprecated)">
+    ```json config.json
+    {
+      "contextProviders": [
+        {
+          "name": "repo-map",
+          "params": {
+            "includeSignatures": false // default true
+          }
+        }
+      ]
+    }
+    ```
+  </Tab>
+</Tabs>
 
 Provides a list of files and the call signatures of top-level classes, functions, and methods in those files. This helps the model better understand how a particular piece of code relates to the rest of the codebase.
 
@@ -248,47 +304,54 @@ This context provider is inpsired by [Aider's repository map](https://aider.chat
 
 Reference the architecture and platform of your current operating system.
 
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: os
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "os" }] }
-```
+<Tabs>
+  <Tab title="YAML">
+    ```yaml config.yaml
+    context:
+      - provider: os
+    ```
+  </Tab>
+  <Tab title="JSON (Deprecated)">
+    ```json config.json
+    {
+      "contextProviders": [
+        {
+          "name": "os"
+        }
+      ]
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ### `@HTTP`
 
 The HttpContextProvider makes a POST request to the url passed in the configuration. The server must return 200 OK with a ContextItem object or an array of ContextItems.
 
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: http
-    params:
-      url: "https://api.example.com/v1/users"
-```
-
-config.json
-
-```json
-{
-  "contextProviders": [
-    { "name": "http", "params": { "url": "https://api.example.com/v1/users" } }
-  ]
-}
-```
+<Tabs>
+  <Tab title="YAML">
+    ```yaml config.yaml
+    context:
+      - provider: http
+        params:
+          url: "https://api.example.com/v1/users"
+    ```
+  </Tab>
+  <Tab title="JSON (Deprecated)">
+    ```json config.json
+    {
+      "contextProviders": [
+        {
+          "name": "http",
+          "params": {
+            "url": "https://api.example.com/v1/users"
+          }
+        }
+      ]
+    }
+    ```
+  </Tab>
+</Tabs>
 
 The receiving URL should expect to receive the following parameters:
 
@@ -310,38 +373,36 @@ Response
 
 The [Model Context Protocol](https://modelcontextprotocol.io/introduction) is a standard proposed by Anthropic to unify prompts, context, and tool use. Continue supports any MCP server with the MCP context provider. Read their [quickstart](https://modelcontextprotocol.io/quickstart) to learn how to set up a local server and then set up your configuration like this:
 
-- YAML
-- JSON
-
-config.yaml
-
-```
-mcpServers:
-  - name: My MCP Server
-    command: uvx
-    args:
-      - mcp-server-sqlite
-      - --db-path
-      - /Users/NAME/test.db
-```
-
-config.json
-
-```json
-{
-  "experimental": {
-    "modelContextProtocolServers": [
-      {
-        "transport": {
-          "type": "stdio",
-          "command": "uvx",
-          "args": ["mcp-server-sqlite", "--db-path", "/Users/NAME/test.db"]
-        }
+<Tabs>
+  <Tab title="YAML">
+    ```yaml config.yaml
+    mcpServers:
+      - name: My MCP Server
+        command: uvx
+        args:
+          - mcp-server-sqlite
+          - --db-path
+          - /Users/NAME/test.db
+    ```
+  </Tab>
+  <Tab title="JSON (Deprecated)">
+    ```json config.json
+    {
+      "experimental": {
+        "modelContextProtocolServers": [
+          {
+            "transport": {
+              "type": "stdio",
+              "command": "uvx",
+              "args": ["mcp-server-sqlite", "--db-path", "/Users/NAME/test.db"]
+            }
+          }
+        ]
       }
-    ]
-  }
-}
-```
+    }
+    ```
+  </Tab>
+</Tabs>
 
 You'll then be able to type "@" and see "MCP" in the context providers dropdown.
 
